<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/evaluateJsButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/evaluate_js_test"
            android:onClick="onEvaluateJsClicked" />

        <Button
            android:id="@+id/show_call_js_function_acrivity_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/evaluateJsButton"
            android:layout_below="@+id/evaluateJsButton"
            android:layout_marginTop="10dp"
            android:text="@string/call_function_button"
            android:onClick="onShowCallJsFunctionActivityClicked" />

        <Button
            android:id="@+id/show_stress_test_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/evaluateJsButton"
            android:layout_below="@+id/show_call_js_function_acrivity_button"
            android:layout_marginTop="10dp"
            android:text="@string/stress_test_button"
            android:onClick="onShowStressTestActivityClicked" />

        <Button
            android:id="@+id/run_real_library_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/show_stress_test_button"
            android:layout_below="@+id/show_stress_test_button"
            android:layout_marginTop="10dp"
            android:text="@string/run_real_library_button"
            android:onClick="onShowRunRealLibraryClicked" />

        <Button
            android:id="@+id/open_character_escape_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/run_real_library_button"
            android:layout_below="@+id/run_real_library_button"
            android:layout_marginTop="10dp"
            android:text="@string/open_cahracter_escape_button"
            android:onClick="onShowCharacterEscapeClicked" />

        <Button
            android:id="@+id/open_percent_character_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/open_character_escape_button"
            android:layout_below="@+id/open_character_escape_button"
            android:layout_marginTop="10dp"
            android:text="@string/open_percent_character_button"
            android:onClick="onShowPercentCharacterClicked" />

        <Button
            android:id="@+id/open_line_endings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/open_percent_character_button"
            android:layout_below="@+id/open_percent_character_button"
            android:layout_marginTop="10dp"
            android:text="@string/open_line_endings"
            android:onClick="onShowLineEndingsClicked" />

    </RelativeLayout>
</ScrollView>

