<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.evgenii.jsevaluatortests.PercentageActivity" >

    <TextView
        android:id="@+id/percentageTestTextViewLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/percetage_test_caption" />
    
    
    <TextView
        android:id="@+id/percentageCodeWordLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/percentageTestTextViewLabel"
        android:layout_below="@+id/percentageTestTextViewLabel"
        android:layout_marginTop="16dp"
        android:text="@string/percetage_code_word" />

    <EditText
        android:id="@+id/percentageCodeLabel"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_alignLeft="@+id/percentageCodeWordLabel"
        android:layout_below="@+id/percentageCodeWordLabel"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine|textNoSuggestions"
        android:text="@string/percetage_js_code" >
        
    </EditText>
        
    <Button
        android:id="@+id/button_evaluate_percentage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/percentageCodeLabel"
        android:layout_below="@+id/percentageCodeLabel"
        android:layout_marginTop="16dp"
        android:text="@string/evaluate_button_text"
        android:onClick="onEvaluatePercentageClicked" />
    
    <TextView
        android:id="@+id/percentageResultLabel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_evaluate_percentage"
        android:layout_below="@+id/button_evaluate_percentage"
        android:layout_marginTop="16dp"
        android:text="" />
    
</RelativeLayout>