<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.evgenii.jsevaluatortests.DestroyActivity">


    <TextView
        android:id="@+id/textViewDestroyOverview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/destroy_test_overview" />

    <Button
        android:id="@+id/button_evaluate_on_destroy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_alignLeft="@+id/textViewDestroyOverview"
        android:layout_below="@+id/textViewDestroyOverview"
        android:text="@string/evaluate_button_text"
        android:onClick="onEvaluateClicked" />


    <Button
        android:id="@+id/button_destroy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_evaluate_on_destroy"
        android:layout_below="@+id/button_evaluate_on_destroy"
        android:layout_marginTop="5dp"
        android:text="@string/destroy_button_text"
        android:onClick="onDestroyClicked" />

    <TextView
        android:id="@+id/js_result_destroy_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_destroy"
        android:layout_below="@+id/button_destroy"
        android:layout_marginTop="5dp"
        android:text="" />

</RelativeLayout>